# clayborne

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  jekyll-gh-pages.yml
Assets/Background/: background.txt
Piskel Art/Character/: Character A-20260403-182506.piskel
Piskel Art/Character/Head + Body/: Character A-20260406-103303.piskel
Piskel Art/Demo World:Background/: World Demo Draft-20260407-123238.piskel
Websites for Our Game Design Result/Webpage/: index.html  package-lock.json  package.json
Websites for Our Game Design Result/Webpage/src/: index.css
Websites for Our Game Design Result/Webpage/src/Presenter/: aboutPresenter.jsx
Websites for Our Game Design Result/Webpage/src/pages/: About.css  About.jsx  Demo.css  Demo.jsx  Home.css  Home.jsx  Play.css  Play.jsx
data/levels/: tiles.csv
docs/: TableOfContents.md  _Sidebar.md  _config.yml  index.md
src/: animation.cpp  animation.hpp  camera.cpp  camera.hpp  interactables.hpp  level_loader.cpp  level_loader.hpp  main.cpp  physics.cpp  physics.hpp  player.cpp  player.hpp  resources.cpp  utils.hpp  world.cpp  world.hpp
src/engine/: input.cpp  input.hpp
src/engine/input/: manager.cpp
website/: game.html  team.md
website/game-design-document/: index.md
